syntax = "proto3";

package api.notes.v1;

option go_package = "github.com/therenotomorrow/gotes/pkg/api/notes/v1";

import "api/notes/v1/messages.proto";
import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  info: {
    title: "Notes Service";
    version: "1.0";
  };
  security_definitions: {
    security: {
      key: "Bearer";
      value: {
        type: TYPE_API_KEY;
        in: IN_HEADER;
        name: "Authorization";
      }
    }
  };
  security: {
    security_requirement: {
      key: "Bearer";
      value: {};
    }
  }
};

// NotesService provides CRUD operations for managing notes.
service NotesService {
  // ListNotes returns a list of notes.
  rpc ListNotes(ListNotesRequest) returns (ListNotesResponse) {
    option (google.api.http) = {
      get: "/api/v1/notes"
    };
  }

  // RetrieveNote returns a single note by its unique identifier.
  rpc RetrieveNote(RetrieveNoteRequest) returns (RetrieveNoteResponse) {
    option (google.api.http) = {
      get: "/api/v1/notes/{id.value}"
    };
  }

  // CreateNote creates a new note and returns it with the unique identifier.
  rpc CreateNote(CreateNoteRequest) returns (CreateNoteResponse) {
    option (google.api.http) = {
      post: "/api/v1/notes"
      body: "*"
    };
  }

  // DeleteNote deletes a note by its unique identifier.
  rpc DeleteNote(DeleteNoteRequest) returns (DeleteNoteResponse) {
    option (google.api.http) = {
      delete: "/api/v1/notes/{id.value}"
    };
  }

  // SubscribeToEvents will notify about creation or deletion of notes.
  rpc SubscribeToEvents(SubscribeToEventsRequest) returns (stream SubscribeToEventsResponse) {
    option (google.api.http) = {
      get: "/api/v1/notes/events"
    };
  }
}
